[plugin-web-app] Filter HTTP context cookies with irrelevant domain while adding them to browser (#5634)